--- a/src/index.css
+++ b/src/index.css
@@ -40,11 +40,51 @@ body {
   backdrop-filter: blur(30px);
 }
 
+.show-gallery {
+  position: relative;
+  top: 0;
+  left: 200;
+  z-index: 100;
+}
+.show-gallery-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  height: 40px;
+  width: 80pxpx;
+  padding: 0.6em 1.2em;
+  border: 2px solid white;
+  border-radius: 15px;
+}
+
+.show-gallery-btn:hover {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.icon {
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-item: center;
+}
+.gallery-on {
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  color: #2ecc0d;
+}
+.gallery-off {
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  color: #ff073a;
+}
+
 .title {
   position: relative;
-  flex: 0.3;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   border-right: 1px solid rgba(255, 255, 255, 0.1);
@@ -101,7 +141,9 @@ body {
 
 .gallery-wrapper {
   width: 10vw;
-  display: flex;
+  display: none;
+  opacity: 0;
+  transform: translateY(80px);
   justify-content: center;
   z-index: 2;
   overflow: auto;
@@ -112,19 +154,19 @@ body {
 }
 
 .gallery {
-  width: 80vw;
-  height: 300vh;
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   gap: 0.75em;
 }
 
-.gallery.item {
+.gallery .item {
   position: relative;
   flex: 1;
   //background-color: #aeaeae;
 }
-.gallery .item:hover {
+.gallery .item {
   cursor: pointer;
 }
 
@@ -132,6 +174,11 @@ body {
   filter: brightness(40%);
   transition: filter 0.4s;
 }
+.gallery .item img:hover {
+  filter: brightness(120%) hue-rotate(25deg) saturate(100%);
+  transition: filter 0.3s ease;
+}
+
 .gallery .item.active img {
   filter: brightness(100%);
 }
@@ -159,6 +206,7 @@ body {
 
   .title {
     flex: 0.25;
+    position: relative;
   }
 
   .canvas-wrapper {
@@ -181,8 +229,8 @@ body {
   }
 
   .gallery {
-    width: 300vw;
-    height: 100px;
+    width: 100%;
+    height: auto;
     flex-direction: column;
   }
 }
