--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,15 @@ body {
   height: 100%;
   font-family: "Fredoka", sans-serif;
   font-weight: 700;
+  font-display: swap;
   background-color: #0f0f0f;
+  overflow: hidden;
+}
+
+body.loading {
+  overflow: auto;
+}
+body.loaded {
   overflow: hidden;
 }
 
@@ -100,13 +108,13 @@ body {
 .gallery-on {
   display: flex;
   justify-content: center;
-  align-item: center;
+  align-items: center;
   color: #2ecc0d;
 }
 .gallery-off {
   display: flex;
   justify-content: center;
-  align-item: center;
+  align-items: center;
   color: #ff073a;
 }
 
