--- a/src/index.css
+++ b/src/index.css
@@ -148,13 +148,13 @@ body.loaded {
   /* left: 0; */
   /* top: 0; */
   width: 100%;
-  aspect-ratio: 16 / 9;
-  height: auto;
+  /* aspect-ratio: 16 / 9; */
+  height: 100%;
 }
 .canvas {
   width: 100%;
   height: 100%;
-  object-fit: "cover";
+  display: block;
 }
 .gallery-wrapper {
   overflow-y: scroll;
@@ -237,8 +237,11 @@ body.loaded {
   }
 
   .canvas-wrapper {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    left: 10%;
+    top: 0;
+
     /* transform: none !important; */
     /* transition: none !important; */
   }
