--- a/src/index.css
+++ b/src/index.css
@@ -83,10 +83,19 @@ body.loaded {
   transform: translate(-50%, -50%);
   pointer-events: none;
 }
+.circular-text-wrapper {
+  display: inline-block;
+  transition: transform 0.6s ease-in-out;
+  transform-origin: center;
+}
 
 .show-gallery-btn:hover {
   background: rgba(0, 0, 0, 0.5);
 }
+.show-gallery-btn:hover .circular-text-wrapper {
+  transform: rotate(360deg);
+}
+
 .circle-text-icon {
   position: absolute;
   top: 0;
@@ -130,7 +139,7 @@ body.loaded {
 }
 
 .title h1 {
-  font-size: clamp(1.5rem, 2vw, 5rem);
+  font-size: clamp(1.5rem, 2vw, 2rem);
   font-weight: 500;
   writing-mode: vertical-rl;
   text-orientation: upright;
